fix: improve glyphicon alignment and preload font asset

--- a/web/css/qcmffvl.css
+++ b/web/css/qcmffvl.css
@@ -189,6 +189,9 @@
 
     .glyphicon {
         top: 2px;
+        display: inline-block;
+        min-width: 1em;
+        text-align: center;
     }
 
     .navbar-fixed-top .navbar-collapse,
